hphp/hack/test/typecheck/inout/bad_inout_use_ellipsis1.php.exp
File "bad_inout_use_ellipsis1.php", line 7, characters 13-20:
Unexpected inout annotation for argument (Typing[4183])
File "bad_inout_use_ellipsis1.php", line 3, characters 23-24:
A variadic parameter can never be inout
