hphp/hack/test/typecheck/inout/bad_inout_use_ellipsis1.php
<?hh // partial

function f(int $x, ...$_): void {}

function test(): void {
  $v = 123;
  f(42, $v, inout $v);
}
